# shadow

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Shadow/: project.yml
Shadow/Shadow/: AppDelegate.swift  ShadowApp.swift
Shadow/ShadowTests/: AXEngineErrorTests.swift  AXTreeCaptureTests.swift  ActionVerifierTests.swift  AgentAXToolsTests.swift  AgentFocusManagerTests.swift  AgentMemoryToolsTests.swift  AgentOrchestratorTests.swift  AgentPromptBuilderTests.swift  AgentRuntimeTests.swift  AgentStreamingStateTests.swift  AgentToolRegistryTests.swift  AgentToolUpgradeTests.swift  AgentVisualToolsTests.swift  AppleFoundationProviderTests.swift  BackgroundTaskManagerTests.swift  CloudLLMProviderTests.swift  CommandFlowTests.swift  ContextBudgetManagerTests.swift  ContextHeartbeatTests.swift  ContextPackerTests.swift  ContextStoreTests.swift  DirectiveMemoryStoreTests.swift  ElementLocatorTests.swift  ExecutionUndoManagerTests.swift  GroundingTests.swift  HardwareProfileTests.swift  HotkeyManagerTests.swift  InputSynthesizerTests.swift  (+39 more)
scripts/: build-rust.sh  generate-app-icon.swift  provision-clip-models.py  provision-llm-models.py  provision-whisper-models.py  reset-permissions.sh  setup-clip-model.py  test-tokenizer-parity.py
shadow-core/: Cargo.toml  build.rs
shadow-core/src/: behavioral.rs  config.rs  event.rs  lib.rs  retention.rs  search.rs  storage.rs  timeline.rs  vector.rs  workflow_extractor.rs
(+171 files in other folders)
