[package]
name = "shadow_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]
name = "shadow_core"

[dependencies]
rmp-serde = "1.3"
rmpv = { version = "1", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
zstd = "0.13"
rusqlite = { version = "0.38", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tantivy = "0.22"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
uniffi = { version = "0.29", features = ["cli"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[build-dependencies]
uniffi = { version = "0.29", features = ["build", "cli"] }
